[gd_scene load_steps=11 format=3 uid="uid://2sji10d8blul"]

[ext_resource type="Script" path="res://scenes/ui/main_menu.gd" id="1_6645d"]
[ext_resource type="VideoStream" path="res://assets/videos/output.ogv" id="3_36fp1"]
[ext_resource type="Texture2D" uid="uid://cy3ju05a0dcem" path="res://assets/images/render.png" id="3_eisaw"]
[ext_resource type="AudioStream" uid="uid://2ou037vtlkeu" path="res://assets/sounds/music/Main Theme 01.mp3" id="4_3uih3"]
[ext_resource type="FontFile" uid="uid://cl5qaxjw1yak7" path="res://assets/ui/fonts/Portmanteau-Regular.otf" id="5_0425m"]
[ext_resource type="AudioStream" uid="uid://npswqgb2f3yi" path="res://assets/sounds/sfx/Firewood Loop.wav" id="8_lgtuu"]
[ext_resource type="AudioStream" uid="uid://ry3x1phryshy" path="res://assets/sounds/music/Light Rain Ambience Loop.wav" id="9_33awd"]

[sub_resource type="LabelSettings" id="LabelSettings_66ycg"]
line_spacing = 2.465
font = ExtResource("5_0425m")
font_size = 46
shadow_size = 0
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t0hxg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6oe2c"]
content_margin_left = 14.0
draw_center = false
border_color = Color(1, 1, 1, 1)

[node name="MainMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_top = NodePath("HBoxContainer/Control/VBoxContainer2/HBoxContainer/VBoxContainer/NewGameButton")
focus_neighbor_right = NodePath("HBoxContainer/Control/VBoxContainer2/HBoxContainer/VBoxContainer/SettingsButton")
focus_mode = 2
mouse_force_pass_scroll_events = false
script = ExtResource("1_6645d")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stream = ExtResource("3_36fp1")
autoplay = true
loop = true

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_eisaw")
expand_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Control3" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.23

[node name="Control" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.46

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15

[node name="Control" type="Control" parent="HBoxContainer/Control/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="ReferenceRect" type="ReferenceRect" parent="HBoxContainer/Control/VBoxContainer2"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="TitleLabel" type="Label" parent="HBoxContainer/Control/VBoxContainer2"]
layout_mode = 2
text = "The Great Work"
label_settings = SubResource("LabelSettings_66ycg")
horizontal_alignment = 1

[node name="Title" type="TextureRect" parent="HBoxContainer/Control/VBoxContainer2/TitleLabel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 13.0
offset_top = -63.0
offset_right = 13.0
offset_bottom = -63.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control2" type="Control" parent="HBoxContainer/Control/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/Control/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.45

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Control/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.28

[node name="NewGameButton" type="Button" parent="HBoxContainer/Control/VBoxContainer2/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0.65, 0.572542, 0.2275, 1)
theme_override_fonts/font = ExtResource("5_0425m")
theme_override_font_sizes/font_size = 18
theme_override_styles/focus = SubResource("StyleBoxEmpty_t0hxg")
theme_override_styles/hover = SubResource("StyleBoxFlat_6oe2c")
toggle_mode = true
action_mode = 0
text = "START"
flat = true
alignment = 0

[node name="SettingsButton" type="Button" parent="HBoxContainer/Control/VBoxContainer2/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("5_0425m")
theme_override_font_sizes/font_size = 18
text = "Settings"
flat = true
alignment = 0

[node name="QuitButton" type="Button" parent="HBoxContainer/Control/VBoxContainer2/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("5_0425m")
theme_override_font_sizes/font_size = 18
text = "Quit"
flat = true
alignment = 0

[node name="Control2" type="Control" parent="HBoxContainer/Control/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control3" type="Control" parent="HBoxContainer/Control/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.34

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 45
alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_3uih3")
volume_db = -11.571
autoplay = true

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_lgtuu")
volume_db = -15.864
autoplay = true

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_33awd")
volume_db = -19.728
autoplay = true

[connection signal="pressed" from="HBoxContainer/Control/VBoxContainer2/HBoxContainer/VBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Control/VBoxContainer2/HBoxContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Control/VBoxContainer2/HBoxContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
